--- a/Loja.Web/Components/Layout/MainLayout.razor
+++ b/Loja.Web/Components/Layout/MainLayout.razor
@@ -1,10 +1,14 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+
+<MudThemeProvider />
+<MudPopoverProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
     </div>
 
     <main>
